[package]
name = "testbed"
version = "0.1.0"
edition = "2021"
# repository = "https://github.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.11.3"
# remove the following when the game is released.
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.20.0"
bracket-lib = "0.8"
rand = "0.8"
serde = "1"
ron = "0.8"

# Enable a small amount of optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3
